--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
-
+org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.3
-	yarn_mappings=1.19.3+build.1
-	loader_version=0.14.11
-
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
+loader_version=0.14.13
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
-
+mod_version=1.0-SNAPSHOT
+maven_group=MobTest
+archives_base_name=mobtest
 # Dependencies
-	fabric_version=0.68.1+1.19.3
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.58.0+1.19
